Add client side script to display five cute dinosaurs.

--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cute Dinosaurs</title>
 </head>
 <body>
+<div id="cuteDinos">
 
+</div>
 <script src="/javascripts/jquery-2.1.4.min.js"></script>
 <script src="/javascripts/app.js"></script>
 </body>
