added generate new deck functionality, swap card buttons

--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,9 @@
     <title>Cute Dinosaurs</title>
 </head>
 <body>
-<div id="cuteDinos">
+<section id="cuteDinos">
 
-</div>
+</section>
 <script src="/javascripts/jquery-2.1.4.min.js"></script>
 <script src="/javascripts/app.js"></script>
 </body>
